# op-bridge

./: CLA.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cla.yml  coverage.yml  dco.yml  release.yml
skill/: SKILL.md
skill/Workflows/: Build.md  DaemonStart.md  DaemonStop.md  Deploy.md  SecretOps.md  WatchConfig.md
src/: client.rs  lib.rs  main.rs  resolver.rs  socket.rs  store.rs  watcher.rs
tests/: integration.rs  watcher_test.rs
