[package]
name = "op-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Dan Gericke <dan@shiftcontrol.io>"]
license = "MIT"
description = "Lightweight 1Password secret broker daemon for Docker containers"
repository = "https://github.com/ShiftControl-io/op-bridge"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
secrecy = { version = "0.10", features = ["serde"] }
zeroize = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1.0.102"
notify = "8"
nix = { version = "0.31.2", features = ["signal"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
panic = "abort"
